🐛 Fix: overflow scroll 375 bug

--- a/src/layouts/content.scss
+++ b/src/layouts/content.scss
@@ -204,6 +204,7 @@ main {
       flex-direction: column;
       justify-content: center;
       align-items: center;
+
     }
 
 
@@ -272,6 +273,8 @@ section {
       width: 100%;
       flex-wrap: wrap;
       height: 8.8rem;
+      flex-direction: column;
+
     }
   }
 
