--- a/src/styles/partials/layouts/_my_reset.scss
+++ b/src/styles/partials/layouts/_my_reset.scss
@@ -42,10 +42,10 @@ h1, h2, h3, h4, h5, h6 {
 
 
 //debug use
-* {
-  outline: 2px solid red !important;
-  ;
-}
+// * {
+//   outline: 2px solid red !important;
+//   ;
+// }
 
 // * {
 //   background-color: rgb(0 100 0/0.1);
